1.[CHG] add UserProfile

--- a/ClairG.ChatApp/ClairG.ChatApp.WebApp/Views/Shared/_UserLayout.cshtml
+++ b/ClairG.ChatApp/ClairG.ChatApp.WebApp/Views/Shared/_UserLayout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
+                    <li>@Html.ActionLink("My Profile", "UserProfile", "User")</li>
                 </ul>
             </div>
         </div>
