--- a/ClairG.ChatApp/ClairG.ChatApp.WebApp/Views/ChatRoom/Index.cshtml
+++ b/ClairG.ChatApp/ClairG.ChatApp.WebApp/Views/ChatRoom/Index.cshtml
@@ -11,14 +11,22 @@
 <br />
 @using (Html.BeginForm("PostComment", "ChatRoom", FormMethod.Post))
 {
-    <input class="pull-right" type="text" name="CommentText" placeholder="Type new comment..."
-           style="width:100%; height:50px; font-size:18px; margin-top:10px" />
-    <br /><br /><br />
-    <input type="submit" value="Post Comment" class="btn btn-success pull-right" style="margin: 5px 0px 10px 0px" />
+    @*if (Session["ImageUrl"].ToString().Length > 0)
+    {
+        <img src="@Url.Content(Session["ImageUrl"].ToString())" alt="No Image" style="height:64px" class="img-responsive" />
+    }
+    else
+    {
+        <img src="@Url.Content("~/Profile_Images/dafault.jpg")" alt="No Image" style="height:64px" class="img-responsive" />
+    }*@
+<input class="pull-right" type="text" name="CommentText" placeholder="Type new comment..."
+       style="width:100%; height:50px; font-size:18px; margin-top:10px" />
+<br /><br /><br />
+<input type="submit" value="Post Comment" class="btn btn-success pull-right" style="margin: 5px 0px 10px 0px" />
 }
 
 <table class="table text-center">
-    
+
     @foreach (var comment in Model)
     {
         <tr>
