--- a/ClairG.ChatApp/ClairG.ChatApp.WebApp/Views/ChatRoom/Index.cshtml
+++ b/ClairG.ChatApp/ClairG.ChatApp.WebApp/Views/ChatRoom/Index.cshtml
@@ -7,34 +7,46 @@
 
 <h2 class="text-success text-center">Welcome to Chat Room</h2>
 
-@*Post comment*@
+@*Post Comment*@
 <br />
 @using (Html.BeginForm("PostComment", "ChatRoom", FormMethod.Post))
 {
-    @*if (Session["ImageUrl"].ToString().Length > 0)
-    {
-        <img src="@Url.Content(Session["ImageUrl"].ToString())" alt="No Image" style="height:64px" class="img-responsive" />
-    }
-    else
-    {
-        <img src="@Url.Content("~/Profile_Images/dafault.jpg")" alt="No Image" style="height:64px" class="img-responsive" />
-    }*@
-<input class="pull-right" type="text" name="CommentText" placeholder="Type new comment..."
-       style="width:100%; height:50px; font-size:18px; margin-top:10px" />
-<br /><br /><br />
-<input type="submit" value="Post Comment" class="btn btn-success pull-right" style="margin: 5px 0px 10px 0px" />
+    <span class="pull-right">
+        @*show picture*@
+        @if (Session["ImageUrl"] != null)
+        {
+            <img src="@Url.Content(Session["ImageUrl"].ToString())" alt="No Image" style="height:50px" class="img-responsive img-circle" />
+        }
+        else
+        {
+            <img src="@Url.Content("~/Profile_Images/dafault.jpg")" alt="No Image" style="height:50px" class="img-responsive img-circle" />
+        }
+        @*post comment*@
+        <input type="text" name="CommentText" placeholder="Type new comment..."
+                style="width:100%; height:50px; font-size:18px; margin-top:10px" />
+        <br />
+        <input type="submit" value="Post Comment" class="btn btn-success" style="margin: 5px 0px 10px 0px" />
+</span>
+
 }
 
-<table class="table text-center">
+<table class="table">
 
     @foreach (var comment in Model)
     {
         <tr>
             <td>
                 @*Show all comments*@
-                <span style="margin-right:20px; font-size:16px; color:green">
-                    @comment.User.Username
-                </span>
+                @*replace username with user's picture*@
+                @if (comment.User.ImageUrl != null)
+                {
+                    <img src="@Url.Content(comment.User.ImageUrl)" alt="No Image" style="height:45px" class="img-responsive img-circle" />
+                }
+                else
+                {
+                    <img src="@Url.Content("~/Profile_Images/dafault.jpg")" alt="No Image" style="height:45px" class="img-responsive img-circle" />
+                }
+                @*show comments*@
                 <span style="font-size:20px">
                     @Html.DisplayFor(modelItem => comment.Text)
                 </span>
@@ -46,9 +58,16 @@
                 @foreach (var reply in comment.Replies)
                 {
                     <br />
-                    <span style="margin-right:20px; font-size:12px; color:gray">
-                        @reply.User.Username
-                    </span>
+                    @*replace username with user's picture*@
+                    if (reply.User.ImageUrl != null)
+                    {
+                        <img src="@Url.Content(reply.User.ImageUrl)" alt="No Image" style="height:35px" class="img-responsive img-circle" />
+                    }
+                    else
+                    {
+                        <img src="@Url.Content("~/Profile_Images/dafault.jpg")" alt="No Image" style="height:35px" class="img-responsive img-circle" />
+                    }
+                    @*show replies*@
                     <span style="font-size:16px">
                         @reply.Text
                     </span>
